// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render UserBlock - AuthorizationStatus.AUTH 1`] = `
<div
  className="user-block"
>
  <a
    href="/mylist"
    onClick={[Function]}
  >
    <div
      className="user-block__avatar"
    >
      <img
        alt="User avatar"
        height="63"
        src="https://htmlacademy-react-3.appspot.com/wtw/static/avatar/7.jpg"
        width="63"
      />
    </div>
  </a>
</div>
`;

exports[`Render UserBlock - AuthorizationStatus.NO_AUTH 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;
